--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,218 @@
+body{
+    font-family: 'Roboto', sans-serif;
+    padding: 0;
+    margin: 0px;
+    box-sizing: border-box;/*SEMPRE RESPEITAR O TAMANHO DAS CAIXAS*/
+}
+h1{
+    margin-top: -10px;
+    padding: 21px;
 
+}
+header{
+    /* margin-left:-10px; */
+    color: white;
+    width: auto;
+   background-image: linear-gradient( to right, purple,violet,purple );
+   
+}
+span{
+    margin-left: 840px;
+}
+a{
+    text-decoration:none; 
+}
+nav{
+    
+    margin-top: 30px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    font-size: 18pt;
+    color:black;
+}
+form{
+    margin-top: 227px;
+    background: #7609a8;
+    color: white;
+    border-style: outset;
+    border-color: #9819d3;
+    height: 69px;
+    width: 270px;
+    border-radius: 18px;
+    margin-left:70px
+    
+}
+
+input{
+    
+    height: 60px;
+    right: 70px;
+    margin-top: 4px;
+    width: 126px;
+    margin-left:4px;
+    background-color: #f2f2f2;
+    padding: 0px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    color: #333;
+}
+input[type=submit]{
+    border-radius: 5px;
+    border: 1px solid rgb(247, 155, 255);
+    background-color: rgb(204, 117, 255);
+    color: rgb(255, 255, 255);
+   
+}
+main{
+    height:317px;   
+}
+.footerindex{
+    
+   
+    margin-bottom: 0%;
+    box-sizing: border-box;
+    width: auto;
+    height:67px;
+   background-image: linear-gradient( to right, purple,violet,purple );
+    color: white;
+    
+    margin-left:-10px;
+    margin-top: 75px;
+    padding: 0px;
+} 
+.bar{
+    margin-left:40px;
+    font-size: 18pt;
+}
+.img{
+    margin-top: -450px;
+    margin-left:700px;
+   
+}
+img{
+    height: 350px;
+}
+
+/* IDE.HTML */
+
+h2{
+    margin-left: 18px;
+}
+
+.txtp{
+    
+    margin-left: 18px;
+}
+.txtG{
+    height:100px;
+    width: 700px;
+    margin-left: 18px;
+}
+.imgide{
+    height: 300px;
+    margin-left: 850px;
+    margin-top: -220px;
+    border-radius: 20px;
+}
+.pagnext{
+    border: 2px solid rgb(152, 24, 190);
+    background-color: rgba(212, 37, 212, 0.788);
+    margin-left: 970px;
+    border-radius: 4px;
+    color: white;
+}
+.paganterior{
+    border: 2px solid rgb(152, 24, 190);
+    background-color: rgba(212, 37, 212, 0.788);
+    margin-left: 18px;
+    border-radius: 4px;
+    color: white;
+}
+.pagside{
+    margin-top: 14px;
+}
+.footeride{
+    margin-bottom: 0%;
+    box-sizing: border-box;/*SEMPRE RESPEITAR O TAMANHO DAS CAIXAS*/
+    width: auto;
+    height: 33px;
+   background-image: linear-gradient( to right, purple,violet,purple );
+    color: white;
+    margin-left:-10px;
+    margin-top: 67px;
+    padding: 0px;
+}
+
+/* Variaveis.HTML */
+
+.imgvar{
+    margin-left: 780px;
+    margin-top: -150px;
+    border-radius: 8px;
+}
+.txtv{
+    height:100px;
+    width: 550px;
+    margin-left: 18px;
+}
+.idenext{
+    color: white;
+    border-radius: 4px;
+    border: 2px solid rgb(152, 24, 190);
+    background-color: rgba(212, 37, 212, 0.788);
+    margin-left: 850px;
+    margin-top: 400px;
+}
+.idevolta{
+    border: 2px solid rgb(152, 24, 190);
+    margin-left: 18px;
+    color: white;
+    border-radius: 4px;
+    background-color: rgba(212, 37, 212, 0.788);
+    
+}
+.vardec{
+    margin-top: 90px;
+}
+.footervar{
+    margin-bottom: 0%;
+    box-sizing: border-box;/*SEMPRE RESPEITAR O TAMANHO DAS CAIXAS*/
+    width: auto;
+    height: 33px;
+   background-image: linear-gradient( to right, purple,violet,purple );
+    color: white;
+    margin-left:-10px;
+    margin-top: 75px;
+    padding: 0px;
+}
+
+/* HELLO-WORLD.HTML */
+
+.txtwor{
+    height:100px;
+    width: 550px;
+    margin-left: 18px; 
+}
+.imgwor{
+    margin-left: 750px;
+    margin-top: -300px;
+    border-radius: 20px;
+}
+.varvolta{
+    border: 2px solid rgb(152, 24, 190);
+    margin-left: 18px;
+    color: white;
+    border-radius: 4px;
+    background-color: rgba(212, 37, 212, 0.788);
+}
+.footerwor{
+    margin-bottom: 0%;
+    box-sizing: border-box;/*SEMPRE RESPEITAR O TAMANHO DAS CAIXAS*/
+    width: auto;
+    height: 33px;
+   background-image: linear-gradient( to right, purple,violet,purple );
+    color: white;
+    margin-left:-10px;
+    margin-top: 81px;
+    padding: 0px;  
+}
